k8s/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: http
