k8s/portainer/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("portainer.staging.mchill.duckdns.org")
      kind: Rule
      services:
        - name: portainer
          port: 9000
